# beirat-tools

./: .pre-commit-config.yaml  .pylintrc  README.md
.github/workflows/: pylint.yml  tests.yml
weg-top-tracker-repo/: .gitignore  README.md  pyproject.toml  requirements-ocr.txt  requirements.txt
weg-top-tracker-repo/.github/workflows/: ci.yml
weg-top-tracker-repo/src/wegtop/: app.py  cli.py  models.py  pdf_ingest.py  text_utils.py  top_parser.py  tracker.py
weg-top-tracker-repo/src/wegtop/export/: excel_exporter.py
weg-top-tracker-repo/src/wegtop/ingest/: base.py  ocr_extractor.py  pdfplumber_extractor.py  pipeline.py
weg-top-tracker-repo/src/wegtop/parsing/: regex_top_parser.py
weg-top-tracker-repo/tests/: conftest.py  test_app_and_export.py  test_cli.py  test_ingest_and_extractors.py  test_parsing_helpers.py  test_text_utils.py  test_top_parser_2021_regression.py
